# releng-tools

./: .gitignore  AUTHORS  CODEOWNERS  README.md  automation.yaml  check_old_rpms.py  check_repo_content.py  check_repo_publisher.py  check_virtsig_need_update.py  clean_repos.sh  diff_branches.py  download_pkgs.sh  getbugs.py  pkg_manifest_diff.py  publish_artifacts.sh  release_notes.py  release_notes.template  release_notes_git.py  release_notes_github.py  remove_old_rpms.py  scan_for_artifacts.sh  sign_rpms.sh  update_yum-repo_symlinks.sh  verifyrepolinks.py  what_needs_rebuild.py
automation/: check-merged.sh  check-milestone-previous.py  check-patch.packages  check-patch.packages.el8  check-patch.repos  check-patch.repos.el8  check-patch.sh  compose-test.sh  milestone-test.sh  python-test.sh
milestones/: ovirt-3.6.5.conf  ovirt-3.6.6.conf  ovirt-3.6.7.conf  ovirt-4.0.0.conf  ovirt-4.0.1.conf  ovirt-4.0.2.conf  ovirt-4.0.3.conf  ovirt-4.0.4.conf  ovirt-4.0.5.conf  ovirt-4.0.6.conf  ovirt-4.1.0.conf  ovirt-4.1.1.conf  ovirt-4.1.2.conf  ovirt-4.1.3.conf  ovirt-4.1.4.conf  ovirt-4.1.5.conf  ovirt-4.1.6.conf  (+41 more)
repoman/: .gitignore  AUTHORS  README  README.rst  requirements.txt  setup.cfg  tox.ini
repoman/repoman/: cmd.py
repoman/repoman/common/: artifact.py  config.py  parser.py  repo.py  utils.py
repoman/repoman/common/filters/: __init__.py  latest.py  name.py
repoman/repoman/common/sources/: __init__.py  dir.py  jenkins.py  koji.py  url.py
repoman/repoman/common/stores/: __init__.py  iso.py
repoman/repoman/common/stores/RPM/: RPM.py  __init__.py
(+695 files in other folders)
