[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[metadata]
name = repoman
author = oVirt Infrastructure/CI team
author_email = infra@ovirt.org
summary = Manage artifact repositories
description-file = README.rst
license = GPLv3
home-page = http://gerrit.ovirt.org/gitweb?p=releng-tools.git;a=tree;f=repoman;hb=HEAD
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: GPLv3
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2 :: Only

[files]
packages =
    repoman

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    repoman=repoman.cmd:main
